<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sid.notepad.NewUserActivity"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/et_username"
        android:hint="@string/username"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle"
        android:paddingStart="10dp"
        android:textSize="20sp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:gravity="center|left"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/et_password"
        android:inputType="textPassword"
        android:layout_below="@+id/et_username"
        android:hint="@string/password"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle"
        android:textSize="20sp"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/et_password2"
        android:inputType="textPassword"
        android:layout_below="@+id/et_password"
        android:hint="@string/re_enter_password"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle"
        android:textSize="20sp"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_sign_up"
        android:text="@string/sign_up"
        android:layout_below="@id/et_password2"
        android:layout_marginTop="15dp"
        android:background="@drawable/rectangle_for_btn"
        android:textColor="#ffffff" />

</RelativeLayout>
